--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ Start About Section
                             Let's explore AI together and unlock its full
                             potential.
                         </p>
-                        <a href="contact.html" class="btn btn-main">Join Now</a>
+                        <a href="#contact" class="btn btn-main">Join Now</a>
                     </div>
                 </div>
                 <!-- End row -->
